updated view and template to use the Treasure model

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -15,7 +15,9 @@
 		</nav>
 
 		<h1>TreasureGram</h1>
-		<p>{{ treasure_name }}</p>
-		<p>{{ treasure_val }}</p>
+		{% for treasure in treasures %}
+		<p>{{ treasure.name }}</p>
+		<p>{{ treasure.value }}</p>
+		{% endfor %}
 	</body>
 </html>
